@@ -1,3 +1,11 @@
+Sun Jan 15 19:28:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/option_uppercase.s: Add.
+	* decode.c (decode): Take option_uppercase into account.
+	* main.c (option_uppercase): Add.
+	(main): Add support for -UpperCase option.
+	* main.h (option_uppercase): Add.
+
 Sun Jan 15 19:03:25 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/aasm_compatibility.s: Add.
